--- a/storefront-site/header.css
+++ b/storefront-site/header.css
@@ -54,7 +54,7 @@ header {
     padding: 12px 20px;
     margin: 8px 0;
     box-sizing: border-box;
-    border: 0;
+    border: 3px solid transparent;
     background-image: url("images/searchicon.png");
     background-position: 10px 10px;
     background-repeat: no-repeat;
@@ -65,4 +65,5 @@ header {
 
 .search-field:focus {
     outline: none;
+    border: 3px solid goldenrod;
 }
