--- a/storefront-site/css/header.css
+++ b/storefront-site/css/header.css
@@ -55,7 +55,7 @@ header {
     margin: 8px 0;
     box-sizing: border-box;
     border: 3px solid transparent;
-    background-image: url("images/searchicon.png");
+    background-image: url("../images/searchicon.png");
     background-position: 10px 10px;
     background-repeat: no-repeat;
     padding-left: 40px;
