Show underlines when hovering over footer links

--- a/storefront-site/styles/footer.css
+++ b/storefront-site/styles/footer.css
@@ -47,6 +47,10 @@ footer hr {
     text-decoration: none;
 }
 
+.footer-nav a:hover {
+    text-decoration: underline;
+}
+
 .footer-logo-container {
     margin-top: 24px;
     display: flex;
