--- a/storefront-site/styles/header.css
+++ b/storefront-site/styles/header.css
@@ -8,6 +8,9 @@ header {
     padding-top: 8px;
     padding-bottom: 6px;
     margin: 0;
+    left: 0px;
+    right: 0px;
+    top: 0px;
 }
 
 .logo-container {
