Reverse homepage background color scheme

--- a/storefront-site/styles/grid-product-listings.css
+++ b/storefront-site/styles/grid-product-listings.css
@@ -6,7 +6,7 @@
     padding-top: 2%;
     padding-bottom: 4%;
     font-family: Verdana;
-    background-color: #F0F0F0;
+    background-color: white;
 }
 
 .inner-grid-product-listings {
