--- a/storefront-site/styles/grid-featured-products.css
+++ b/storefront-site/styles/grid-featured-products.css
@@ -22,7 +22,7 @@
     padding-right: 0;
     padding-top: 0;
     padding-bottom: 16px;
-    background-color: #F0F0F0;
+    background-color: white;
 }
 
 .featured-product-content {
@@ -72,8 +72,8 @@
 .featured-product img {
     display: block;
     margin: auto;
-    max-height: 100%;
-    max-width: 100%;
+    max-height: 85%;
+    max-width: 85%;
     width: auto;
     height: auto;
 }
