Add dropdown on header sign in section

--- a/storefront-site/styles/grid-featured-products.css
+++ b/storefront-site/styles/grid-featured-products.css
@@ -44,7 +44,7 @@
 
 .featured-product-content span a:hover {
     text-decoration: underline;
-    color: #c7511f;
+    color: #c75b2d;
 }
 
 .featured-product {
