Update header style, responsive search bar

--- a/storefront-site/styles/header.css
+++ b/storefront-site/styles/header.css
@@ -14,12 +14,12 @@ header {
 }
 
 .logo-container {
-    flex: 0;
+    flex: 0 1;
     margin-right: 20px;
 }
 
 .logo {
-    height: 64px;
+    max-height: 64px;
     margin: 0;
     padding: 0;
 }
@@ -48,9 +48,14 @@ header {
 
 .search-form {
     flex: 1;
-    min-width: 200px;
     overflow: hidden;
     margin-right: 20px;
+}
+
+@media (max-width: 750px) {
+    .search-form {
+        display: none;
+    }
 }
 
 .search-field {
