Update link color

--- a/storefront-site/styles/grid-featured-products.css
+++ b/storefront-site/styles/grid-featured-products.css
@@ -39,7 +39,7 @@
 
 .featured-product-content span a {
     text-decoration: none;
-    color: #007185;
+    color: #0066c0;
 }
 
 .featured-product-content span a:hover {
