Change cursor to pointer when hovering over create account button

--- a/storefront-site/styles/register.css
+++ b/storefront-site/styles/register.css
@@ -64,6 +64,10 @@
     margin-bottom: 12px;
 }
 
+.create-account-button:hover {
+    cursor: pointer;
+}
+
 #password-requirement {
     font-size: 75%;
 }
