Add font family to login create account div

--- a/storefront-site/styles/login.css
+++ b/storefront-site/styles/login.css
@@ -82,6 +82,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-family: Helvetica, Arial, sans-serif;
 }
 
 .create-account-container span {
