Update font families

--- a/storefront-site/styles/grid-featured-products.css
+++ b/storefront-site/styles/grid-featured-products.css
@@ -6,7 +6,7 @@
     width: 90%;
     margin: 1% auto;
     padding: 0;
-    font-family: Verdana, sans-serif;
+    font-family: Verdana, Tahoma, sans-serif;
 }
 
 .featured-product-container {
@@ -49,7 +49,7 @@
     margin-right: auto;
     margin-top: 18px;
     margin-bottom: 18px;
-    font-family: Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     background-color: white;
     border: 2px solid gray;
     border-radius: 4px;
