--- a/storefront-site/styles/mini-footer.css
+++ b/storefront-site/styles/mini-footer.css
@@ -23,7 +23,7 @@ footer .mini-footer-content {
     width: 100%;
     font-size: 70%;
     color: #505050;
-    font-family: Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 footer .mini-footer-content nav {
