--- a/storefront-site/styles/footer.css
+++ b/storefront-site/styles/footer.css
@@ -3,7 +3,7 @@ footer {
     padding-top: 24px;
     padding-bottom: 48px;
     margin: 0;
-    font-family: Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     color: white;
 }
 
