--- a/storefront-site/styles/grid-product-listings.css
+++ b/storefront-site/styles/grid-product-listings.css
@@ -5,7 +5,7 @@
     padding-right: 5%;
     padding-top: 2%;
     padding-bottom: 4%;
-    font-family: Verdana, sans-serif;
+    font-family: Verdana, Tahoma, sans-serif;
     background-color: white;
 }
 
@@ -27,7 +27,7 @@
     margin-right: auto;
     margin-top: 18px;
     margin-bottom: 18px;
-    font-family: Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     background-color: white;
     border: 2px solid gray;
     border-radius: 4px;
