--- a/storefront-site/styles/login.css
+++ b/storefront-site/styles/login.css
@@ -22,7 +22,7 @@
     padding-top: 0px;
     padding-bottom: 20px;
     margin-top: 8px;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .login-form hr {
@@ -83,7 +83,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .create-account-container span {
