--- a/storefront-site/styles/register.css
+++ b/storefront-site/styles/register.css
@@ -22,7 +22,7 @@
     padding-top: 0px;
     padding-bottom: 20px;
     margin-top: 8px;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .register-form hr {
