--- a/storefront-site/styles/grid-featured-products.css
+++ b/storefront-site/styles/grid-featured-products.css
@@ -20,7 +20,7 @@
     margin-top: 16px;
     padding-left: 0;
     padding-right: 0;
-    padding-top: 0;
+    padding-top: 8px;
     padding-bottom: 16px;
     background-color: white;
 }
