--- a/storefront-site/styles/register.css
+++ b/storefront-site/styles/register.css
@@ -25,6 +25,11 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.register-form h1 {
+    font-size: 1.5em;
+    margin: 0.75em 0;
+}
+
 .register-form hr {
     margin-top: 20px;
     margin-bottom: 20px;
