Add Terms of Service page

--- a/storefront-site/styles/footer.css
+++ b/storefront-site/styles/footer.css
@@ -2,7 +2,7 @@ footer {
     background-color: #28374a;
     padding-top: 24px;
     padding-bottom: 48px;
-    margin: 0;
+    margin: 24px 0 0 0;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
 }
