--- a/storefront-site/styles/tos.css
+++ b/storefront-site/styles/tos.css
@@ -1,6 +1,6 @@
 .grid-container {
     display: grid;
-    grid-template-columns: 13% auto;
+    grid-template-columns: minmax(180px, 13%) auto;
     grid-template-rows: auto;
     grid-template-areas: "sidebar main";
 }
