--- a/storefront-site/styles/grid-featured-products.css
+++ b/storefront-site/styles/grid-featured-products.css
@@ -51,13 +51,13 @@
     margin-bottom: 18px;
     font-family: Arial, Helvetica, sans-serif;
     background-color: white;
-    border: 2px solid gray;
-    border-radius: 4px;
+    /* border: 2px solid gray;
+    border-radius: 4px; */
 }
 
-.featured-product:hover {
+/* .featured-product:hover {
     border: 2px solid goldenrod;
-}
+} */
 
 .featured-product img {
     display: block;
