--- a/storefront-site/styles/grid-featured-products.css
+++ b/storefront-site/styles/grid-featured-products.css
@@ -3,8 +3,8 @@
     flex-wrap: wrap;
     align-items: stretch;
     justify-content: space-between;
-    width: 90%;
-    margin: 1% auto;
+    width: 92%;
+    margin: auto;
     padding: 0;
     font-family: Verdana, Tahoma, sans-serif;
 }
