product pages css

--- a/storefront-site/styles/google-material-icons.css
+++ b/storefront-site/styles/google-material-icons.css
@@ -18,6 +18,7 @@
     word-wrap: normal;
     direction: ltr;
     -webkit-font-feature-settings: 'liga';
+    font-feature-settings: 'liga';
     -webkit-font-smoothing: antialiased;
     display: inline-flex;
     vertical-align: middle;
