--- a/storefront-site/styles/product.css
+++ b/storefront-site/styles/product.css
@@ -66,11 +66,12 @@ button {
     text-align: center;
     border-radius: 5px;
     border-color: none;
+    border: 1px solid #a88734;
     color: black;
     font-weight: bold;
     line-height: 25px;
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
     width: 100%;
-    margin-bottom: 10px
+    margin-bottom: 10px;
 }
