Update product page

--- a/storefront-site/styles/product.css
+++ b/storefront-site/styles/product.css
@@ -7,27 +7,27 @@
     display: grid;
     grid-template-columns: auto auto auto;
     padding: 10px;
-  }
-  
-  .grid-item {
+}
+
+.grid-item {
     padding: 20px;
     text-align: center;
     align-self: end;
-  }
+}
 
-  .stars {
-      color: orange;
-      margin-bottom: 10px;
-      text-align: left;
-  }
-  
-  .stock {
+.stars {
+    color: orange;
+    margin-bottom: 10px;
+    text-align: left;
+}
+
+.stock {
     color: green;
     margin-bottom: 10px;
     text-align: left;
 }
 
-  .other-products {
+.other-products {
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -60,7 +60,7 @@ h3 {
     text-align: left;
 }
 
-button {
+.add-to-cart-button {
     background-image: linear-gradient(#f6db9d, #f0c352);
     padding: 10px;
     text-align: center;
@@ -74,4 +74,36 @@ button {
     font-family: Arial, Helvetica, sans-serif;
     width: 100%;
     margin-bottom: 10px;
+}
+
+.add-to-cart-button:hover {
+    cursor: pointer;
+    background-image: linear-gradient(#e4c782, #e0b23d);
+}
+
+.buy-now-button {
+    background-image: linear-gradient(#fac26d, #ffa41c);
+    padding: 10px;
+    text-align: center;
+    border-radius: 5px;
+    border-color: none;
+    border: 1px solid #a88734;
+    color: black;
+    font-weight: bold;
+    line-height: 25px;
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.buy-now-button:hover {
+    cursor: pointer;
+    background-image: linear-gradient(#dfac60, #e09018);
+}
+
+ul {
+    padding-left: 8px;
+    list-style: disc inside;
+    text-align: left;
 }
