--- a/storefront-site/styles/checkout.css
+++ b/storefront-site/styles/checkout.css
@@ -1,49 +1,60 @@
-.checkout-outer-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 1000px;
-    margin: auto;
-    margin-bottom: 40px;
-    padding-top: 12px;
+.checkout-main-container {
+    display: grid;
+    grid-template-columns: 5fr 5fr;
+    grid-template-rows: 1fr 5fr 1fr;
+    grid-row-gap: 10px;
+    column-gap: 20px;
+    padding-bottom:200px;
+    grid-template-areas:'progress  progress'
+                        'info  subtotal'
+                        'info  empty';
+    
 }
-.checkout-billingAddress {
-    border: 1px solid rgba(128, 128, 128, 0.3);
-    border-radius: 8px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 0px;
-    padding-bottom: 20px;
-    margin-top: 8px;
-    font-family: Arial, Helvetica, sans-serif;
+.checkout-info-container {
+    grid-area:info;
+    width: auto;
+    height: 750px auto;
+    margin: 0 0 0 auto;
+    margin-bottom:12px;
+    background-color: #FFFFFF;
+    padding:20px 8px 20px 30px;
 }
 
 .checkout-form input {
     margin: auto;
     margin-top: 2px;
-    margin-bottom: 8px;
+    margin-bottom: 2px;
     width: 338px;
     padding: 8px;
     border: 1px solid rgba(128, 128, 128, 0.8);
     border-radius: 4px;
+    padding-top:10px;
 }
 
 .checkout-form input:focus {
     outline-width: 2;
     outline-color: goldenrod;
 }
-.checkout-shippingAddress {
-    border: 1px solid rgba(128, 128, 128, 0.3);
-    border-radius: 8px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 0px;
-    padding-bottom: 20px;
-    margin-top: 8px;
-    font-family: Arial, Helvetica, sans-serif;
-}
 
 .form-spacer {
     margin-bottom: 12px;
     margin-top: 12px;
+}
+
+.checkout-small-container{
+    grid-area: progress;
+    background-color: #FFFFFF;
+    width:auto;
+    margin-bottom: 8px;
+    margin-top: 8px;
+}
+
+.checkout-subtotal-container{
+    grid-area: subtotal;
+    width: 300px;
+    height:20px;
+    background-color: #FFFFFF;
+    margin-bottom: 12px;
+    margin-top: 12px;
+    align-content: center;
 }
