--- a/storefront-site/styles/confirmation.css
+++ b/storefront-site/styles/confirmation.css
@@ -1,19 +1,28 @@
-.confirmation-outer-container {
-    display: flex;
-    flex-direction: column;
+.confirmation-main-container {
+    display: grid;
+    grid-template-areas:'progress-bar' 'confirmation';
+    grid-template-rows: 1fr 2fr;
+    align-items:center;
     justify-content: center;
-    margin: auto;
-    margin-bottom: 40px;
-    padding-top: 12px;
 }
 
-.confirmation-inner-container {
-    border: 1px solid rgba(128, 128, 128, 0.3);
-    border-radius: 8px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 0px;
-    padding-bottom: 20px;
+
+.confirmation-small-container{
+    grid-area: progress-bar;
+    background-color: #FFFFFF;
+    height: auto;
+    width: auto;
+    margin-bottom: 8px;
     margin-top: 8px;
-    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    
+}
+
+.confirmation-confirm-container{
+    grid-area: confirmation;
+    background-color: #FFFFFF;
+    height: auto;
+    width: 800px;
+    margin-top: 10px;
+    text-align: center;
 }
