--- a/storefront-site/styles/faq.css
+++ b/storefront-site/styles/faq.css
@@ -1,8 +1,28 @@
+.grid-container {
+    display: grid;
+    grid-template-columns: minmax(180px, 13%) auto;
+    grid-template-rows: auto;
+    grid-template-areas: "sidebar main";
+}
+
+.sidebar {
+    grid-area: sidebar;
+}
+
+.sidebar-nav {
+    border: 1px solid rgba(128, 128, 128, 0.3);
+    border-radius: 8px;
+    padding: 20px;
+    margin: 12px;
+}
+
+.sidebar-nav li {
+    line-height: 1.5;
+    font-size: 0.9em;
+}
+
 .faq {
-        margin-left: 4vw;
-        margin-right: 4vw;
-        margin-top: 10vh;
-        margin-bottom: 10vh;
+    grid-area: main;
 }
 
 h3 {
