--- a/storefront-site/styles/cart.css
+++ b/storefront-site/styles/cart.css
@@ -110,13 +110,17 @@ body {
 
 .cart-item .cart-item-image {
     grid-area: image;
+    width: 180px;
+    height: 180px;
+    display: flex;
+    justify-content: center;
 }
 
 .cart-item .cart-item-image img {
     display: block;
     margin: auto;
-    max-height: 180px;
-    max-width: 180px;
+    max-height: 80%;
+    max-width: 80%;
     width: auto;
     height: auto;
 }
