Make input field appearance more consistent between Chrome and Firefox

--- a/storefront-site/styles/user-preferences.css
+++ b/storefront-site/styles/user-preferences.css
@@ -35,8 +35,9 @@
 }
 
 .preferences-form input:focus {
-    outline-width: 2;
-    outline-color: goldenrod;
+    outline: none;
+    border: 1px solid goldenrod;
+    box-shadow: 0 0 0 1px goldenrod;
 }
 
 .preferences-form-section {
