--- a/storefront-site/styles/checkout.css
+++ b/storefront-site/styles/checkout.css
@@ -25,8 +25,9 @@
 }
 
 .checkout-form input:focus {
-    outline-width: 2;
-    outline-color: goldenrod;
+    outline: none;
+    border: 1px solid goldenrod;
+    box-shadow: 0 0 0 1px goldenrod;
 }
 
 .progress-container {
