--- a/storefront-site/styles/register.css
+++ b/storefront-site/styles/register.css
@@ -49,8 +49,9 @@
 }
 
 .register-form input:focus {
-    outline-width: 2;
-    outline-color: goldenrod;
+    outline: none;
+    border: 1px solid goldenrod;
+    box-shadow: 0 0 0 1px goldenrod;
 }
 
 .form-spacer {
