--- a/storefront-site/styles/global.css
+++ b/storefront-site/styles/global.css
@@ -90,6 +90,11 @@ input:invalid {
     box-shadow: none;
 }
 
+input[type="text"].invalid, input[type="password"].invalid {
+    border-color: red;
+    box-shadow: inset 0 0 3px red;
+}
+
 h1 {
     display: block;
     font-size: 2em;
