--- a/storefront-site/styles/register.css
+++ b/storefront-site/styles/register.css
@@ -50,8 +50,8 @@
 
 .register-form input:focus {
     outline: none;
-    border: 1px solid goldenrod;
-    box-shadow: 0 0 0 1px goldenrod;
+    border-color: goldenrod;
+    box-shadow: inset 0 0 3px goldenrod;
 }
 
 .form-spacer {
