--- a/storefront-site/styles/user-preferences.css
+++ b/storefront-site/styles/user-preferences.css
@@ -36,8 +36,8 @@
 
 .preferences-form input:focus {
     outline: none;
-    border: 1px solid goldenrod;
-    box-shadow: 0 0 0 1px goldenrod;
+    border-color: goldenrod;
+    box-shadow: inset 0 0 3px goldenrod;
 }
 
 .preferences-form-section {
