--- a/storefront-site/styles/login.css
+++ b/storefront-site/styles/login.css
@@ -38,8 +38,12 @@
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(128, 128, 128, 0.5), rgba(0, 0, 0, 0));
 }
 
+.login-form label {
+    display: block;
+}
+
 .login-form input {
-    margin: auto;
+    display: block;
     margin-top: 2px;
     margin-bottom: 8px;
     width: 338px;
