--- a/storefront-site/styles/register.css
+++ b/storefront-site/styles/register.css
@@ -38,8 +38,12 @@
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(128, 128, 128, 0.5), rgba(0, 0, 0, 0));
 }
 
+.register-form label {
+    display: block;
+}
+
 .register-form input {
-    margin: auto;
+    display: block;
     margin-top: 2px;
     margin-bottom: 8px;
     width: 338px;
@@ -76,7 +80,7 @@
 }
 
 #password-requirement {
-    font-size: 75%;
+    font-size: 0.8em;
 }
 
 #disclaimer {
